[package]
name = "koto_documentation"
version = "0.16.0"
description = "The documentation for the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
indexmap = { workspace = true }
pulldown-cmark = { workspace = true }
